--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ dependencies {
 	// Logging
     compile 'ch.qos.logback:logback-classic:1.1.3'
     compile 'org.slf4j:slf4j-api:1.7.12'
+	
+	// Files
+	compile 'org.apache.commons:commons-io:1.3.2'
 
 	// Testing
     testCompile 'org.codehaus.groovy:groovy-all:2.4.3'
